--- a/strapFlex/index.html
+++ b/strapFlex/index.html
@@ -11,7 +11,7 @@
 
 
     
-    <div class="height border border-danger d-flex flex-column flex-sm-row justify-content-between">
+    <div class="border border-danger d-flex flex-column justify-content-between align-items-between flex-sm-row justify-content-between align-items-center">
         <button class="btn btn-dark btn-lg">link 1</button>
         <button class="btn btn-dark btn-lg">link 2</button>
         <button class="btn btn-dark btn-lg">link 3</button>
