--- a/strapProj1/index.html
+++ b/strapProj1/index.html
@@ -16,6 +16,54 @@
         </div>  
     </nav>
 
+    <section id="header" class="jumbotron text-center">
+        <h1 class="display-3 color-white">PatternZ!!</h1>
+        <p class="lead color-white">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <a href="#" class="btn btn-primary">contact</a>
+        <a href="#" class="btn btn-danger">linx</a>
+    </section>
+
+    <section id="gallery">
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-4 mb-4 col-md-6">
+                <div class="card">
+                    <img src="img/image-1.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Pattern 1</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                        <a href="#" class="btn btn-outline-info btn-sm">info</a>
+                        <a href="#" class="btn btn-outline-danger btn-sm"><i class="far fa-bell"></i></a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4 col-md-6">
+                <div class="card">
+                    <img src="img/image-2.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Pattern 1</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                        <a href="#" class="btn btn-outline-info btn-sm">info</a>
+                        <a href="#" class="btn btn-outline-danger btn-sm"><i class="far fa-bell"></i></a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4 col-md-6">
+                <div class="card">
+                    <img src="img/image-3.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Pattern 1</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                        <a href="#" class="btn btn-outline-info btn-sm">info</a>
+                        <a href="#" class="btn btn-outline-danger btn-sm"><i class="far fa-bell"></i></a>
+                    </div>
+                </div>
+              </div>
+              <!-- here -->
+          </div>
+        </div>
+    </section>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
