basic app finished

--- a/strapAnimal/index.html
+++ b/strapAnimal/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <nav id="mainNavbar" class="navbar navbar-dark bg-danger navbar-expand-md py-0 fixed-top">
+    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top">
         <a href="#" class="navbar-brand">animalZ</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,9 @@
         </div>
     </nav>
 
-    <section class="container-fluid px-0">
+    <br>
+
+    <section class="container-fluid px-0 content">
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="heading-group">
@@ -46,12 +48,12 @@
         </div>
     </section>
 
-    <section class="container-fluid px-0">
-        <div class="row text-center align-items-center">
-            <div class="col-md-6">
+    <section class="container-fluid px-0 content">
+        <div class="row text-center align-items-center justify-content-center">
+            <div class="col-md-6 order-2 order-md-1">
                 <img src="img/animal-1.jpg" alt="animal image" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-1">
               <div class="row justify-content-center">
                   <div class="col-10 col-lg-8">
                     <h2><span><i class="d-none d-lg-inline fas fa-dragon mr-3"></i></span>Support Distressed Animals</h2>
@@ -62,8 +64,64 @@
         </div>
     </section>
 
+    <section class="container-fluid px-0 content">
+        <div class="row text-center align-items-center">
+            <div class="col-md-6 order-1">
+              <div class="row justify-content-center">
+                  <div class="col-10 col-lg-8">
+                    <h2><span><i class="d-none d-lg-inline fas fa-dragon mr-3"></i></span>Support Distressed Animals</h2>
+                    <p>Come to our urban preservation! Visit retired performers and ex-zoo residents. Ask about sponsoring an animal, and helping him or her eventually live out their days on a massive wildlife preservation in Kenya owned by our partner.</p>
+                  </div>
+              </div>
+            </div>
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="img/animal-2.jpg" alt="animal image" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid px-0 content">
+        <div class="row text-center align-items-center">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="img/animal-3.jpg" alt="animal image" class="img-fluid">
+            </div>
+            <div class="col-md-6 order-1">
+              <div class="row justify-content-center">
+                  <div class="col-10 col-lg-8">
+                    <h2><span><i class="d-none d-lg-inline fas fa-dragon mr-3"></i></span>Support Distressed Animals</h2>
+                    <p>Come to our urban preservation! Visit retired performers and ex-zoo residents. Ask about sponsoring an animal, and helping him or her eventually live out their days on a massive wildlife preservation in Kenya owned by our partner.</p>
+                  </div>
+              </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid px-0 content">
+        <div class="row text-center align-items-center">
+            <div class="col-md-6 order-1">
+              <div class="row justify-content-center">
+                  <div class="col-10 col-lg-8">
+                    <h2><span><i class="d-none d-lg-inline fas fa-dragon mr-3"></i></span>Support Distressed Animals</h2>
+                    <p>Come to our urban preservation! Visit retired performers and ex-zoo residents. Ask about sponsoring an animal, and helping him or her eventually live out their days on a massive wildlife preservation in Kenya owned by our partner.</p>
+                  </div>
+              </div>
+            </div>
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="img/animal-4.jpg" alt="animal image" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<!-- <script>
+    $(function () {
+        $(document).scroll(function() {
+            var $nav = $("#mainNavbar");
+            $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+    });
+</script> -->
 </body>
 </html>
