--- a/strapAnimal/index.html
+++ b/strapAnimal/index.html
@@ -30,9 +30,7 @@
         </div>
     </nav>
 
-    <br>
-
-    <section class="container-fluid px-0 content">
+    <section class="container px-0 content">
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="heading-group">
@@ -48,7 +46,7 @@
         </div>
     </section>
 
-    <section class="container-fluid px-0 content">
+    <section class="container px-0 content">
         <div class="row text-center align-items-center justify-content-center">
             <div class="col-md-6 order-2 order-md-1">
                 <img src="img/animal-1.jpg" alt="animal image" class="img-fluid">
@@ -64,7 +62,7 @@
         </div>
     </section>
 
-    <section class="container-fluid px-0 content">
+    <section class="container px-0 content">
         <div class="row text-center align-items-center">
             <div class="col-md-6 order-1">
               <div class="row justify-content-center">
@@ -80,7 +78,7 @@
         </div>
     </section>
 
-    <section class="container-fluid px-0 content">
+    <section class="container px-0 content">
         <div class="row text-center align-items-center">
             <div class="col-md-6 order-2 order-md-1">
                 <img src="img/animal-3.jpg" alt="animal image" class="img-fluid">
@@ -96,7 +94,7 @@
         </div>
     </section>
 
-    <section class="container-fluid px-0 content">
+    <section class="container px-0 content">
         <div class="row text-center align-items-center">
             <div class="col-md-6 order-1">
               <div class="row justify-content-center">
